translation-tool/inputs/source_meta/objects/Case.object
<CustomObject>
    <fields>
        <fullName>HSvc_AccountNumber__c</fullName>
        <description>This field displays Account Number</description>
        <formula>Account.SAN__c</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Account_City__c</fullName>
        <formula>Account.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Account_Country_Code__c</fullName>
        <formula>IF (Account.Company_or_Location__c = &apos;Location&apos;, TEXT(Account.ShippingCountryCode) ,TEXT( Account.BillingCountryCode) )</formula>
        <label>Account Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Account_State__c</fullName>
        <formula>Account.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Account_Street_Address__c</fullName>
        <formula>Account.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Account_Zip_Code__c</fullName>
        <formula>Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ActivityCode__c</fullName>
        <description>Activity Code of the Activity Type selected</description>
        <label>Activity Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ActivityDateEntered__c</fullName>
        <label>Activity Date Entered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_ActivityEnteredBy__c</fullName>
        <label>Activity Entered By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ActivityTypeLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Type</label>
        <referenceTo>Hsvc_ActivityType__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_ActualChangeWindowDuration__c</fullName>
        <description>Actual Change Duration. to be entered manually</description>
        <inlineHelpText>Enter Actual Change Window duration in HH:MM format.</inlineHelpText>
        <label>Actual Change Window Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ActualTaskDuration__c</fullName>
        <description>Actual Duration Of request. To be Entered manually</description>
        <inlineHelpText>Enter the actual number of hours/minutes spent working on the task, not the elapsed time.</inlineHelpText>
        <label>Actual Task Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Actual_Appeal_Date__c</fullName>
        <label>Actual Appeal Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_Actual_Appeal_Resolution_Date__c</fullName>
        <label>Actual Appeal Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_AddKeyFobRelatedSections__c</fullName>
        <label>Add Key Fob Related Sections</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Aged_Flag__c</fullName>
        <description>This field is used for Aged Cases reporting</description>
        <formula>IF(Now() &gt;  Hsvc_StartTime__c +7 , true, false)</formula>
        <label>Aged Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Applicable_Country__c</fullName>
        <label>Location Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_AssetId__c</fullName>
        <label>Asset Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_AssetServiceStatus__c</fullName>
        <description>Asset Status returned from NMP</description>
        <label>Asset Service Status?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Assigned_To_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HSvc_Assigned_To_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Associate_CUN_ID__c</fullName>
        <formula>HSvc_Associate_Case__r.CUN_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associate CUN ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Associate_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to store the value of case to which the current case is being associated.</description>
        <label>Associated Case Number</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
            <errorMessage>This case can be associated to only an open case</errorMessage>
            <filterItems>
                <field>$Source.Case_Record_Type__c</field>
                <operation>equals</operation>
                <valueField>Case.Case_Record_Type__c</valueField>
            </filterItems>
            <filterItems>
                <field>Case.Status</field>
                <operation>equals</operation>
                <value>Open - Dispatch, Operator Analysis, Pending - Callback, Pending Customer Input</value>
            </filterItems>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Case.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.CreatedDate</field>
                <operation>greaterThan</operation>
                <valueField>Case.CreatedDate</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases (Associate Case)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Attention__c</fullName>
        <label>Attention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_BillableTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billable To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Billable To)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Billing_Handle_Time__c</fullName>
        <label>Billing Handle Time</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_BriefDescriptionOfChange__c</fullName>
        <description>What is being changed?  (SW, HW, Infrastructure, RF, etc.)</description>
        <label>Brief Description of Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CCRNewValue__c</fullName>
        <description>Configuration Change Request New Value. This can include any value such as IP Address</description>
        <label>CCR New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CCROldValue__c</fullName>
        <description>Configuration Change Request Old Value. This can include any value such as IP Address</description>
        <label>CCR Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CalculatedOutageHours__c</fullName>
        <label>Calculated Outage Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_CaseCreationRuleKey__c</fullName>
        <description>Case Creation Rule Key</description>
        <formula>AccountId &amp; &quot;^^^&quot; &amp;
RecordType.Name &amp; &quot;^^^&quot; &amp;
Text(Case_Type__c) &amp; &quot;^^^&quot; &amp;
TEXT( Case_Subtype__c ) &amp; &quot;^^^&quot; &amp;
TEXT( Customer_Request_Type__c ) &amp; &quot;^^^&quot; &amp;
TEXT(HSvc_SuspectedAsset__c)&amp; &quot;^^^&quot; &amp;
AssetId &amp; &quot;^^^&quot; &amp;
TEXT(Actual_Issue__c)&amp; &quot;^^^&quot; &amp;
TEXT(Action__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Creation Rule Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CaseHierarchy__c</fullName>
        <label>Case Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CaseOwner_Fed_ID__c</fullName>
        <formula>Owner:User.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HSvc_CaseOwner_Fed_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CaseOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the owner of the current case. If created in SFDC it is the logged in user else it specified in the integration case (in the PSFT_Created_By__c) field.</description>
        <label>Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_CaseTotalOpenTime__c</fullName>
        <formula>IF(
NOT(ISBLANK(Hsvc_Case_Total_Open_Time__c)),
TEXT( FLOOR(VALUE(Hsvc_Case_Total_Open_Time__c)/1440) ) &amp; &quot; day(s) &quot;
&amp; TEXT( FLOOR( MOD( (VALUE(Hsvc_Case_Total_Open_Time__c)/1440) * 24, 24 ) ) ) &amp; &quot; hour(s) &quot;
&amp; TEXT( FLOOR( MOD(( VALUE(Hsvc_Case_Total_Open_Time__c)/1440) * 24 * 60, 60 ) )) &amp; &quot; minute(s) &quot;
&amp; TEXT(ROUND(MOD((VALUE(Hsvc_Case_Total_Open_Time__c)/1440) * 24 * 3600, 60),0)) &amp; &quot; second(s)&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Total Open Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Case_Resolved_Date__c</fullName>
        <label>Case Resolved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_Case_Status_Change_Date__c</fullName>
        <description>Field to capture the date in which the status was changed</description>
        <label>Case Status Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_Case_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Release 3  This field is created to store the template from which the case is created.</description>
        <label>Case Template</label>
        <referenceTo>HSvc_CaseTemplate__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_ChangeWindowManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>NMC staff who opened change window.</inlineHelpText>
        <label>Change Window Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Change_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Change Approvers custom object</description>
        <label>Change Approver</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>HSvc_Change_Approvers__c.isVisible__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HSvc_Change_Approvers__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Change_Manager_Name__c</fullName>
        <description>This field is created for Ebonding purposes</description>
        <formula>HSvc_ChangeWindowManager__r.FirstName &amp; &apos; &apos;&amp; HSvc_ChangeWindowManager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ChronicRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chronic Rules</label>
        <referenceTo>HSvc_ChronicRules__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Chronic_Site_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chronic Site History</label>
        <referenceTo>HSvc_ChronicSiteHistory__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ConfirmedScheduledDate__c</fullName>
        <label>Confirmed Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_Confirmed_Schedule_Slot__c</fullName>
        <label>Confirmed Schedule Slot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ContactName__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ContactPhone__c</fullName>
        <description>Release - 3, This field is available in RMA details section on RMA layouts and is populated by PSFT via e-bonding</description>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HSvc_Count_towards_Contractual_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Count towards Contractual SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_CourtesyDispatchEndDate__c</fullName>
        <label>Courtesy Dispatch End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_CreatedByDSSUName__c</fullName>
        <formula>IF(ISBLANK(CreatedBy.HSvc_DSS_User_Name__c),  Created_By_Name__c,  CreatedBy.HSvc_DSS_User_Name__c)</formula>
        <label>Created By DSS User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CreatedByNMPUName__c</fullName>
        <formula>IF(ISBLANK(CreatedBy.HSvc_NMP_User_Name__c), CreatedBy.Username,CreatedBy.HSvc_NMP_User_Name__c)</formula>
        <label>Created By NMP User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CreatedByPSUName__c</fullName>
        <formula>CreatedBy.HSvc_PS_User_Name__c</formula>
        <label>Created By PS User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CriticalCase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set a flag on the case to indicate that the case was set to Priority of &apos;Critical&apos; at some point during the case lifecycle</description>
        <label>Critical Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_CustomerGatewayLoginName__c</fullName>
        <label>Customer Gateway Login Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CustomerId__c</fullName>
        <formula>Account.Customer_ID__c</formula>
        <label>CustomerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CustomerRequestedDate__c</fullName>
        <label>Customer Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_CustomerReservedDate__c</fullName>
        <label>Customer Reserved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_CustomerServiceHandleTime__c</fullName>
        <label>Customer Service Handle Time</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_CustomerTicketNumber__c</fullName>
        <description>Related to CES and Customer Gateway. Will be retrieved from PS. Needs to be stored on Activity</description>
        <label>Customer Ticket Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CustomerTypeAffected__c</fullName>
        <label>Customer Type Affected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
                <value>
                    <fullName>SOHO</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Customer_Handle_Time__c</fullName>
        <label>Customer Handle Time</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_Customer_Location_ID__c</fullName>
        <formula>Account.Customer_Location_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Location ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_DSSOrderId__c</fullName>
        <externalId>true</externalId>
        <label>DSS Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_DSS_Order__c</fullName>
        <label>DSS Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_DVRIPAddress__c</fullName>
        <label>DVR IP address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_DealerName__c</fullName>
        <label>Dealer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_DealerTel__c</fullName>
        <label>Dealer Tel</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HSvc_DeviceSAN__c</fullName>
        <description>Captures the Asset&apos;s SAN on Case. This is used for outbound message  to PSFT</description>
        <label>DeviceSAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_DispatchInstructionsMsg__c</fullName>
        <description>Stores special instruction values.</description>
        <label>Dispatch Instructions Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_DispatchInstructions__c</fullName>
        <description>Type of special instructions for work order</description>
        <label>Dispatch Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_DistributorName__c</fullName>
        <label>Distributor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_DurationHours__c</fullName>
        <label>Duration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_DutyManagerAlertTime__c</fullName>
        <label>Duty Manager Alert Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_DutyManagerEmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when Email Sent on Outage or Degradation Event</description>
        <label>Duty Manager Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_EMTTool__c</fullName>
        <label>EMT Tool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ETATime__c</fullName>
        <label>ETA Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_EmailAddress__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HSvc_Emergency_Policy_Definition__c</fullName>
        <inlineHelpText>Required for Emergency Change Type</inlineHelpText>
        <label>Emergency Policy Definition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A change is required to repair an issue that is impacting service (or will impact service if not corrected)</fullName>
                </value>
                <value>
                    <fullName>A change is required to correct a security issue</fullName>
                </value>
                <value>
                    <fullName>Does not adhere to emergency change policy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_EngDescription__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_EquipmentRequired__c</fullName>
        <label>Equipment Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Install &amp; Equipment Required</fullName>
                </value>
                <value>
                    <fullName>Ship Equipment (No Install)</fullName>
                </value>
                <value>
                    <fullName>Bring Used Equipment</fullName>
                </value>
                <value>
                    <fullName>Install Only (No Equipment)</fullName>
                </value>
                <value>
                    <fullName>Service Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_EscalateToLevel3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalate To Level 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Escalation_Type__c</fullName>
        <description>Changed field and  picklist values label as per D-01123</description>
        <label>Appeal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_Applicable_Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Escalated to Hughes</fullName>
                    <label>Appeal to Hughes</label>
                </value>
                <value>
                    <fullName>Escalated to SIC</fullName>
                    <label>Appeal to SIC</label>
                </value>
                <value>
                    <fullName>Appeal to SUBTEL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_EventPostMortem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Post Mortem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Exception__c</fullName>
        <description>When case is escalated to another group/queue and if there is no resolution, then the Exception reason is documented in  this field.</description>
        <label>Exception</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Exclude_Asset_from_future_chronic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Asset from future chronic cal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Exclude_From_ChronicCalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Case From ChronicCalculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Expedited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expedited?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_FSOID__c</fullName>
        <label>FSO ID</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HSvc_FSO_Id__c</fullName>
        <description>This field stores the FSO Id from Installation portal. The field would be populated by Hughes SF Service user (Integration user)</description>
        <externalId>true</externalId>
        <label>FSO Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_FSO_Link__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_400, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_400)) + &apos;apex/HughesSvc_Redirect?action=InstallationOrder&apos;&amp; SUBSTITUTE($Label.Current_Language_Key, &apos;_&apos;, &apos;&apos;) &amp; &apos;&amp;servId=&apos; &amp;  HSvc_FSO_Id__c  &amp;  &apos;&amp;id=&apos; &amp;  Id  , HSvc_FSO_Id__c, &apos;_blank&apos;)</formula>
        <label>FSO ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_FailedQAReason__c</fullName>
        <label>Failed QA Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_FieldServiceHandleTime__c</fullName>
        <label>Field Service Handle Time</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_FieldTechEducationIssue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Tech Education Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_FirstandLastName__c</fullName>
        <label>First and Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_HNSProductLine__c</fullName>
        <label>HNS Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JUPITER 4</fullName>
                </value>
                <value>
                    <fullName>VSAT</fullName>
                </value>
                <value>
                    <fullName>HNSYSTEM</fullName>
                </value>
                <value>
                    <fullName>HX SYSTEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_ImpactDurationForecast__c</fullName>
        <description>How long is the impact forecasted to last?</description>
        <inlineHelpText>Enter HH:MM for the duration of the impact only, not the window duration.</inlineHelpText>
        <label>Impact Duration Forecast</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ImplementationPlan__c</fullName>
        <description>A list of releases and associated approved Implementation Plans</description>
        <label>Implementation Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_ImplementationResults__c</fullName>
        <description>What was the impact to service?</description>
        <label>Implementation Results</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outage</fullName>
                </value>
                <value>
                    <fullName>Degradation</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_InsatllerName__c</fullName>
        <label>Installer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_InstallerId__c</fullName>
        <label>Installer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_InstallerSignOff__c</fullName>
        <label>Installer Sign Off</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_InstallerTel__c</fullName>
        <label>Installer Tel</label>
        <type>Phone</type>
    </fields>
	<fields>
        <fullName>Hsvc_Is_Complainable__c</fullName>
        <formula>ISPICKVAL(Account.ShippingCountryCode, &apos;PE&apos;) &amp;&amp;
!ISPICKVAL(Hsvc_Problem_Category__c, &apos;Complaint&apos;) &amp;&amp; 
!ISPICKVAL(Status, &apos;Cancelled&apos;) &amp;&amp;
!ISPICKVAL(Status, &apos;Operator Analysis - Escalated&apos;) &amp;&amp; 
!ISPICKVAL(Status, &apos;Escalated to Regulator&apos;) &amp;&amp;
OR(NOT(IsClosed), ADDMONTHS(ClosedDate,24) &gt;= NOW())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Complainable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_KBExitCodeNew__c</fullName>
        <label>KB Exit Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change of Account Ownership</fullName>
                </value>
                <value>
                    <fullName>Complimentary Restore Tokens</fullName>
                </value>
                <value>
                    <fullName>Dispatch-Complimentary</fullName>
                </value>
                <value>
                    <fullName>Dispatch-Standard</fullName>
                </value>
                <value>
                    <fullName>Due Date Extension</fullName>
                </value>
                <value>
                    <fullName>Gen4 Pre-Order</fullName>
                </value>
                <value>
                    <fullName>Hardware Upgrade</fullName>
                </value>
                <value>
                    <fullName>Move Program</fullName>
                </value>
                <value>
                    <fullName>Order Correction (lease vs. purchase)</fullName>
                </value>
                <value>
                    <fullName>RMA-Complimentary</fullName>
                </value>
                <value>
                    <fullName>RMA-Standard</fullName>
                </value>
                <value>
                    <fullName>Service Credit</fullName>
                </value>
                <value>
                    <fullName>Service Discount</fullName>
                </value>
                <value>
                    <fullName>Service Plan Downgrade</fullName>
                </value>
                <value>
                    <fullName>Service Plan Upgrade (with price match)</fullName>
                </value>
                <value>
                    <fullName>Service Plan Upgrade (no price match)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_KBExitCode__c</fullName>
        <description>Provides CSR a field to indicate the KB section that either met their needs or the section where they exited the KB article</description>
        <label>KB Exit Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_KB_Exit_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KB Exit Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>HSvc_KB_Exit_Code__c.is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>HSvc_KB_Exit_Code__c.Case_Record_Type__c</field>
                <operation>equals</operation>
                <valueField>$Source.Case_Record_Type__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HSvc_KB_Exit_Code__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_KeyFobShipFirstNLastName__c</fullName>
        <label>First and Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_LastModifiedDSSUName__c</fullName>
        <formula>IF(ISBLANK(LastModifiedBy.HSvc_DSS_User_Name__c), LastModifiedBy.Username,LastModifiedBy.HSvc_DSS_User_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified DSS User Name</label>
        <type>Text</type>
    </fields>
</CustomObject>